# web-ninja

./: .gitignore  Makefile  README.md  pyproject.toml
tests/core/template/: test_directory.py  test_module.py
web_ninja/core/builder/: builder.py
web_ninja/core/template/: base.py  directory.py  module.py
web_ninja/modules/dev_tools/: mk_template.j2  pre-commit.j2
web_ninja/modules/message_broker/: base.py  celery.py  docker-compose.yml
web_ninja/templates/: develop.py  layered_architecture.py  message_broker.py
web_ninja/utils/: directory.py
